fixed responsive video banner, does not work on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,17 +14,18 @@
     position: absolute;
     top: 50%;
     left: 50%;
-		width: 100%;
+		min-width: 100%;
+		min-height: 100%;
     z-index: -100;
     transform: translateX(-50%) translateY(-50%);
-    background-size: cover;
-    transition: 1s opacity;
-		background-size: cover;
-		background-position: top;
-		background-attachment: fixed;
-		background-repeat: no-repeat;
-		text-align: center;
-		border-top: 0.5em solid #2d6cc0;
+		object-fit: fill;
+    /*background-size: cover;*/
+    /*transition: 1s opacity;*/
+		/*background-position: top;*/
+		/*background-attachment: fixed;*/
+		/*background-repeat: no-repeat;*/
+		/*text-align: center;*/
+		/*border-top: 0.5em solid #2d6cc0;*/
 	}
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block;
